--- a/templates/base.html
+++ b/templates/base.html
@@ -8,13 +8,15 @@
 <meta http-equiv="cache-control" content="max-age=604800" />
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-<title>GreatKart | One of the Biggest Online Shopping Platform</title>
+<title>The o | One of the Biggest Online Shopping Platform</title>
 
-<link href="{% static './images/logo.png' %}" rel="shortcut icon" type="image/x-icon">
+
 
 <!-- jQuery -->
 <script src="{%static 'js/jquery-2.0.0.min.js %'}" type="text/javascript"></script>
 
+<!-- jQuery -->
+<script src="{% static 'js/jquery-2.0.0.min.js' %}" type="text/javascript"></script>
 <!-- Bootstrap4 files-->
 <script src="{%static 'js/bootstrap.bundle.min.js' %}" type="text/javascript"></script>
 <link href="{%static 'css/bootstrap.css' %}" rel="stylesheet" type="text/css"/>
@@ -65,7 +67,3 @@ $(document).ready(function() {
 {% include 'includes/footer.html'%}
 
 <!-- Footer end  -->
-
-</body>
-</html>
-
