--- a/templates/store/store.html
+++ b/templates/store/store.html
@@ -145,7 +145,9 @@
                             <span class="price">{{product.price}} BDT</span>
                         </div> <!-- price-wrap.// -->
                     </div>
-                    <a href="{% url 'add_cart' product.id %}" class="btn btn-block btn-primary">Add to cart</a>
+                   
+                    <a href="{{ product.get_url }}" class="btn btn-block btn-primary">View Details</a>
+                
                 </figcaption>
             </figure>
         </div> <!-- col.// -->
