--- a/templates/base.html
+++ b/templates/base.html
@@ -13,7 +13,7 @@
 
 
 <!-- jQuery -->
-<script src="{%static 'js/jquery-2.0.0.min.js %'}" type="text/javascript"></script>
+<script src="{%static 'js/jquery-2.0.0.min.js' %}" type="text/javascript"></script>
 
 <!-- jQuery -->
 <script src="{% static 'js/jquery-2.0.0.min.js' %}" type="text/javascript"></script>
