--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -7,6 +7,15 @@
 <!-- ========================= SECTION CONTENT ========================= -->
 <section class="section-conten padding-y" style="min-height:84vh">
 
+
+  {% if request.GET.command == 'varification' %}
+
+  <div class="container mx-auto alert alert-info text-center"> 
+    <h5>Thank you for Registration with Us . We have send a varification mail. to your email address <i>{{request.GET.email}}</i> </h5>
+    <h5>Alredy verified? <a href="{%url 'login' %}">Sign In</a></h5>
+  </div>
+
+  {%else%}
 <!-- ============================ COMPONENT LOGIN   ================================= -->
 	<div class="card mx-auto" style="max-width: 380px; margin-top:100px;">
       <div class="card-body">
@@ -37,7 +46,7 @@
      <p class="text-center mt-4">Don't have account? <a href="{%url 'register'%}">Sign up</a></p>
      <br><br>
 <!-- ============================ COMPONENT LOGIN  END.// ================================= -->
-
+  {% endif %}
 
 </section>
 <!-- ========================= SECTION CONTENT END// ========================= -->
