--- a/templates/accounts/forgotPassword.html
+++ b/templates/accounts/forgotPassword.html
@@ -6,39 +6,28 @@
 
 <!-- ========================= SECTION CONTENT ========================= -->
 <section class="section-conten padding-y" style="min-height:84vh">
-
-
-  {% if request.GET.command == 'varification' %}
-
-  <div class="container mx-auto alert alert-info text-center"> 
-    <h5>Thank you for Registration with Us . We have send a varification mail. to your email address <i>{{request.GET.email}}</i> </h5>
-    <h5>Alredy verified? <a href="{%url 'login' %}">Sign In</a></h5>
-  </div>
-
-  {%else%}
 <!-- ============================ COMPONENT LOGIN   ================================= -->
 	<div class="card mx-auto" style="max-width: 380px; margin-top:100px;">
       <div class="card-body">
-      <h4 class="card-title mb-4">Sign in</h4>
+      <h4 class="card-title mb-4">Forgot Password</h4>
 
 		{%include 'includes/alert.html' %}
 
-      <form action="{% url 'login' %}" method="POST">
+      <form action="{% url 'forgotPassword' %}" method="POST">
         {% csrf_token%}
           <div class="form-group">
 			 <input type="email" class="form-control" placeholder="Email Address" name="email" >
-          </div> <!-- form-group// -->
+
+                <div class="form-group">
+                  
+                  <a href="{%url 'login'%}" class="float-right">Got password? Login </a> 
+                
+                </div> <!-- form-group form-check .// -->
+
           <div class="form-group">
-			<input type="password" class="form-control" placeholder="Password" name="password">
-          </div> <!-- form-group// -->
-          
-          <div class="form-group">
-          	<a href="{%url 'forgotPassword'%}" class="float-right">Forgot password?</a> 
-           
-          </div> <!-- form-group form-check .// -->
-          <div class="form-group">
-              <button type="submit" class="btn btn-primary btn-block"> Login  </button>
-          </div> <!-- form-group// -->    
+              <button type="submit" class="btn btn-primary btn-block"> Reset Password  </button>
+          </div> <!-- form-group// --> 
+
       </form>
       </div> <!-- card-body.// -->
     </div> <!-- card .// -->
@@ -46,7 +35,7 @@
      <p class="text-center mt-4">Don't have account? <a href="{%url 'register'%}">Sign up</a></p>
      <br><br>
 <!-- ============================ COMPONENT LOGIN  END.// ================================= -->
-  {% endif %}
+ 
 
 </section>
 <!-- ========================= SECTION CONTENT END// ========================= -->
