--- a/templates/orders/payments.html
+++ b/templates/orders/payments.html
@@ -23,7 +23,7 @@
         <div class="card">
             <h5 class="card-header">Payment Method </h5>
             <div class="card-body">
-                <p class="card-text">Bkash</p>
+                <p>COD</p>
             </div>
         </div> 
         <div class="card">
@@ -101,7 +101,7 @@
 			<p class="text-center mb-3">
 				<img src="{%static './images/misc/payments.png'%}" height="26">
 			</p>
-			<a href="{% url 'checkout' %}" class="btn btn-primary btn-block"> Make payment  </a>
+			<a href="{% url 'pay' %}" class="btn btn-primary btn-block"> Confirm Order </a>
 			<a href="{% url 'store' %}" class="btn btn-light btn-block">Continue Shopping</a>
 		</div> <!-- card-body.// -->
 		</div> <!-- card.// -->
