--- a/templates/store/product-detail.html
+++ b/templates/store/product-detail.html
@@ -13,11 +13,18 @@
 	<div class="row no-gutters">
 		<aside class="col-md-6">
 <article class="gallery-wrap"> 
-	<div class="img-big-wrap">
-	   <a href="#"><img src="{{ single_product.images.url }}"></a>
+	<div class="img-big-wrap mainImage">
+		<a href="#"><img src="{{ single_product.images.url }}"></a>
 	</div> <!-- img-big-wrap.// -->
 	
 </article> <!-- gallery-wrap .end// -->
+		<ul class="thumb">
+			<li> 
+				{% for i in product_gallery %}
+				<a href="{{i.image.url}}" target="mainImage"><img src="{{i.image.url}}" alt=""></a>
+				{% endfor %}
+			</li>
+		</ul>
 		</aside>
 		<main class="col-md-6 border-left">
 
