--- a/templates/accounts/dashboard.html
+++ b/templates/accounts/dashboard.html
@@ -35,7 +35,7 @@
 					<div class="card">
 						<div class="card-body ">
 							<div class="card-title text-center">
-								<img src="https://www.w3schools.com/howto/img_avatar.png" alt="user porfile pic" width="50" height="50", style="border-radius: 50%;" >
+							<img src="{{userprofile.profile_pic.url}}" alt="Profile Picture" width="100" style="border-radius:50px;">
 								<div class="mt-1">
 									<p class="mb-0">{{user.email}}</p>
 									<p>{{user.phone_number}}</p>
