--- a/templates/includes/dashboard_sidebar.html
+++ b/templates/includes/dashboard_sidebar.html
@@ -3,8 +3,8 @@
     <ul class="list-group">
         <a class="list-group-item {% if request.path == '/accounts/' %}active{% endif %}  " href="{%url 'dashboard'%}"> Dashboard  </a>
         <a class="list-group-item {% if request.path == '/accounts/my_orders/'%}active{% endif %} " href="{%url 'my_orders'%}"> My Orders </a>
-        <a class="list-group-item  " href="#"> Edit Profile </a>
-        <a class="list-group-item  " href="#"> Change Password </a>
+        <a class="list-group-item {% if request.path == '/accounts/edit_profile/'%}active{% endif %}  " href="{% url 'edit_profile' %}"> Edit Profile </a>
+        <a class="list-group-item {% if request.path == '/accounts/update_password/'%}active{% endif %}" href="{% url 'update_password' %}"> Change Password </a>
 
     </ul>
     <br>
